# Aguila

./: .gitignore  CMakeLists.txt  README.md  rebuild.sh  requirements-llm.txt
lessons/: am.md  antennas.md  digital.md  fm.md  intro.md  regulations.md  sdr.md  signal.md  waves.md
resources/: AGENT-TUNING-TOOL.md  FSK_TRANSMITTER.md  LANGCHAIN_INTEGRATION.md  README.md  WATERFALL-OPTIMIZER-SIMPLE.md  WF-DB-OPTIMIZATION.md  basic_qpsk.py  chat_coordinator.py  fm_transmitter.py  fm_transmitter_wrapper.py  gmsk_transmitter.py  icons.qrc  kevin_qpsk.py  nancy_qpsk.py  ook_data_transmitter.py  ook_transmitter.py  qpsk_transmitter.py  real_fm_transmit.py  sdr_switch.sh  simple_fm_transmit.py  simple_fm_transmit.sh  simple_fsk.py  simple_ook.py  simple_psk.py  simple_qpsk.py  test_commands.py  test_gqrx_tuning.py  tuning_tool.py  waterfall_display_optimizer.py  waterfall_optimizer.py
src/: CMakeLists.txt
src/applications/gqrx/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  receiver.h  remote_control.cpp  remote_control.h
src/llm/: CMakeLists.txt  chat_manager.py
src/qtgui/: CMakeLists.txt  docksigint.cpp  docksigint.h  docksigint.ui  plotter.h  sigint_logger.cpp  sigint_logger.h  spectrum_capture.cpp  spectrum_capture.h  spectrum_visualizer.cpp  spectrum_visualizer.h  waterfall_display.cpp  waterfall_display.h
tests/: test_chat_manager.py
